log
Thu May 12 00:23:39 UTC 2022: 
 tests:  0|5
total_score: 0/70
bbaa8ee
Thu May 12 02:53:52 UTC 2022: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:13: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
             push_back(list, adj_n);
             ^~~~~~~~~
             pushBack
cc1: all warnings being treated as errors
Compilation failed
65969d3
Thu May 12 02:54:40 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2a3d291
Thu May 12 02:59:36 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
00c469d
Thu May 12 03:00:00 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:12: error: ‘new_move’ undeclared (first use in this function); did you mean ‘memmove’?
            new_move += 1;
            ^~~~~~~~
            memmove
sudoku.c:64:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4933c0b
Thu May 12 03:00:09 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1f51d23
Thu May 12 03:00:26 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bbde90e
Thu May 12 03:11:40 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
aabe64f
Thu May 12 03:11:59 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9df9c4b
Thu May 12 03:12:10 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1c53d50
Thu May 12 03:12:31 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7749d55
Thu May 12 03:13:07 UTC 2022: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
c132d73
Thu May 12 03:14:27 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
67b4478
Thu May 12 03:14:34 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3ae98d7
Thu May 12 03:14:48 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
684ff07
Thu May 12 03:15:01 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0daf72a
Thu May 12 03:16:35 UTC 2022: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
da89368
Thu May 12 03:17:25 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4d515ab
Thu May 12 03:20:16 UTC 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e30621d
Thu May 12 03:20:38 UTC 2022: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|4
total_score: 15/70
b62b635
Thu May 12 03:20:49 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
8ed7b39
Thu May 12 03:21:19 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ed92dd9
Thu May 12 03:24:14 UTC 2022: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:18: error: ‘nodo’ undeclared (first use in this function); did you mean ‘Node’?
     printf("%d ",nodo->sudo[i][j]);
                  ^~~~
                  Node
sudoku.c:53:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:52:9: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:51:9: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
cc1: all warnings being treated as errors
Compilation failed
81a4592
Thu May 12 03:24:23 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f53d3c0
Thu May 12 15:32:29 UTC 2022: 
 sudoku.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
d2c3ce8
Thu May 12 15:42:30 UTC 2022: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:7: error: unused variable ‘array’ [-Werror=unused-variable]
   int array[10];
       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
be7759d
Thu May 12 15:42:58 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d002dcd
Thu May 12 15:43:11 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
48f6730
Thu May 12 15:44:08 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ffc065b
Thu May 12 15:44:40 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
138bfd3
Thu May 12 15:51:59 UTC 2022: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:13: error: unused variable ‘j’ [-Werror=unused-variable]
         int j=3*(k%3) + (p%3) ;
             ^
sudoku.c:57:13: error: unused variable ‘i’ [-Werror=unused-variable]
         int i=3*(k/3) + (p/3) ;
             ^
cc1: all warnings being treated as errors
Compilation failed
43bc0fb
Thu May 12 15:53:51 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
total_score: 0/70
de97ad1
Thu May 12 19:23:01 UTC 2022: 
 sudoku.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:10: error: unused variable ‘arreglo’ [-Werror=unused-variable]
     int* arreglo = (int*)calloc(10,sizeof(int));
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
415ad6d
Thu May 12 21:17:53 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
687b3f8
Thu May 12 21:18:19 UTC 2022: 
 sudoku.c | 15 +--------------
 1 file changed, 1 insertion(+), 14 deletions(-)
 tests:  2|4
total_score: 15/70
131f15c
Thu May 12 21:18:27 UTC 2022: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0abb19b
Thu May 12 21:20:15 UTC 2022: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c9a4212
Thu May 12 21:22:25 UTC 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
919cabd
Thu May 12 21:22:45 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
da656f6
Thu May 12 22:21:57 UTC 2022: 
 sudoku.c | 24 +++++++++++++++++-------
 1 file changed, 17 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:76:9: error: ‘p’ undeclared (first use in this function)
     for(p=0;p<9;p++)
         ^
sudoku.c:76:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
51a7246
Thu May 12 22:22:07 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6aa1e0f
Thu May 12 22:22:32 UTC 2022: 
 sudoku.c | 24 +-----------------------
 1 file changed, 1 insertion(+), 23 deletions(-)
 tests:  2|4
total_score: 15/70
86fa20a
Thu May 12 22:28:23 UTC 2022: 
 sudoku.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
0a420c8
Thu May 12 22:29:19 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a7dfbeb
Thu May 12 22:29:27 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b0bb017
Thu May 12 22:34:49 UTC 2022: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:78:10: error: unused variable ‘arreglo’ [-Werror=unused-variable]
     int* arreglo = (int*)calloc(10,sizeof(int));
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cf3768b
Thu May 12 22:34:57 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
62adf68
Thu May 12 22:35:47 UTC 2022: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 15/70
733fd0c
